--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,52 @@
-html {
-  /* This image will be displayed fullscreen */
-  background: url('../images/hands.jpg') no-repeat center center;
-  /* Ensure the html element always takes up the full height of the browser window */
-  min-height: 100%;
-  background-size: cover;
+@font-face {
+  font-family: 'Oswald';
+  src: url(../fonts/Oswald-Regular.ttf);
 }
-body {
-  /* Workaround for some mobile browsers */
-  min-height: 100%;
+#mainPage {
+  background-image: url('../images/hands.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.stackedButton {
+  display: block;
+  position: relative;
+  clear: both;
+  width: 100%;
+  height: 50px;
+  margin-bottom: 30px;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-family: 'Oswald', sans-serif;
+  color: white;
+  font-size: 20px;
+  letter-spacing: 2px;
+  border: none;
+}
+.stackedButton:hover {
+  background-color: black;
+}
+.stackedButton:focus {
+  outline: none;
+}
+#buttonGroup {
+  width: 200px;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+#logo {
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  width: 350px;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 10px 10px 10px 10px;
 }
