--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
   src: url(../fonts/Oswald-Regular.ttf);
 }
 #mainPage {
-  background-image: url('../images/hands.jpg');
+  background-image: url('../images/bulbs.jpg');
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover;
@@ -42,11 +42,18 @@
   top: 50%;
   left: 10%;
 }
+#header {
+  position: absolute;
+  top: -110px;
+  left: 0;
+  right: 0;
+  height: 110px;
+  background-color: #ffffff;
+}
 #logo {
   position: absolute;
-  left: 10%;
-  top: 10%;
   width: 350px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0);
   padding: 10px 10px 10px 10px;
+  left: -350px;
 }
