--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,8 @@
   font-family: 'Oswald';
   src: url(../fonts/Oswald-Regular.ttf);
 }
-#mainPage {
+#bg,
+#search-bg {
   background-image: url('../images/bulbs.jpg');
   background-repeat: no-repeat;
   background-position: center;
@@ -56,4 +57,66 @@
   background-color: rgba(255, 255, 255, 0);
   padding: 10px 10px 10px 10px;
   left: -350px;
+}
+#filter {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: 99;
+  /* Pull the background 70px higher to the same place as #bg's */
+  background-position: center -70px;
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+}
+#bg {
+  background-position: center top;
+  padding: 250px 190px 120px 190px;
+}
+#search-container {
+  position: relative;
+}
+#search-bg {
+  /* Absolutely position it, but stretch it to all four corners, then put it just behind #search's z-index */
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: 99;
+  /* Pull the background 70px higher to the same place as #bg's */
+  background-position: center -70px;
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+}
+#search {
+  /* Put this on top of the blurred layer */
+  position: relative;
+  z-index: 100;
+  padding: 20px;
+  background: #222222;
+  /* for IE */
+  background: rgba(34, 34, 34, 0.75);
+}
+@media (max-width: 600px) {
+  #bg {
+    padding: 10px;
+  }
+  #search-bg {
+    background-position: center -10px;
+  }
+}
+#search h2,
+#search h5,
+#search h5 a {
+  text-align: center;
+  color: #fefefe;
+  font-weight: normal;
+}
+#search h2 {
+  margin-bottom: 50px;
+}
+#search h5 {
+  margin-top: 100px;
 }
