--- a/css/index.less
+++ b/css/index.less
@@ -24,7 +24,7 @@ body{
     top: 0; bottom: 0; left: 0; right: 0;
 }
 
-#search-bg {
+#popup-bg {
     background-image:url('../images/bulbs.jpg');
     background-repeat: no-repeat;
     background-position: center;
@@ -82,12 +82,12 @@ body{
     padding: 200px 250px 120px 250px;
 }
 
-#search-container {
+#popup-container {
     position: relative;
 }
 
-#search-bg {
-    /* Absolutely position it, but stretch it to all four corners, then put it just behind #search's z-index */
+#popup-bg {
+    /* Absolutely position it, but stretch it to all four corners, then put it just behind #popup's z-index */
     position: absolute;
     top: 0px;
     right: 0px;
@@ -102,7 +102,7 @@ body{
     filter: blur(10px);
 }
 
-#search {
+#popup {
     /* Put this on top of the blurred layer */
     position: relative;
     z-index: 100;
@@ -122,11 +122,11 @@ body{
 
 @media (max-width: 600px ) {
     #bg { padding: 10px; }
-    #search-bg { background-position: center -10px; }
+    #popup-bg { background-position: center -10px; }
 }
 
-#search h2, #search h5, #search h5 a { text-align: center; color: #fefefe; font-weight: normal; }
-#search h2 { 
+#popup h2, #popup h5, #popup h5 a { text-align: center; color: #fefefe; font-weight: normal; }
+#popup h2 { 
     margin-bottom: 50px;
     -webkit-margin-before: 0em;
     -webkit-margin-after: .2em;
@@ -137,4 +137,4 @@ body{
     font-size: 14px; 
 
 }
-#search h5 { margin-top: 30px }
+#popup h5 { margin-top: 30px }
