--- a/css/index.less
+++ b/css/index.less
@@ -22,6 +22,7 @@ body{
     background-size: cover;
     position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
+    min-height: 650px;
 }
 
 #popup-bg {
