--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,6 @@
   position: relative;
   width: 200px;
   height: 50px;
-  margin-top: 30px;
   background-color: rgba(0, 0, 0, 0.65);
   font-family: 'Oswald', sans-serif;
   color: white;
@@ -40,6 +39,7 @@
   letter-spacing: 2px;
   border: none;
   border-radius: 5px;
+  margin-left: 5px;
 }
 .menuButton:hover {
   background-color: black;
@@ -50,6 +50,7 @@
 #buttonGroup {
   position: absolute;
   right: 10px;
+  margin-top: 30px;
 }
 #header {
   position: absolute;
@@ -93,7 +94,7 @@
   padding: 20px;
   background: #222222;
   /* for IE */
-  background: rgba(34, 34, 34, 0.75);
+  background: rgba(34, 34, 34, 0.65);
   border-radius: 10px;
 }
 #popup img {
