--- a/css/index.less
+++ b/css/index.less
@@ -38,7 +38,6 @@ body{
     position: relative;
     width: 200px;
     height: 50px;
-    margin-top: 30px;
     background-color: rgba(0,0,0,0.65);
     font-family: @font-button;
     color: white;
@@ -46,7 +45,8 @@ body{
     letter-spacing: 2px;
     border: none;
     border-radius: 5px;
-    
+    margin-left: 5px;
+
     &:hover {
         background-color: black;
     }
@@ -59,6 +59,7 @@ body{
 #buttonGroup {
     position: absolute;
     right: 10px;
+    margin-top: 30px;
 }
 
 #header {
@@ -109,7 +110,7 @@ body{
     z-index: 100;
     padding: 20px;
     background: rgb(34,34,34); /* for IE */
-    background: rgba(34,34,34,0.75);
+    background: rgba(34,34,34,0.65);
     border-radius: 10px;
 
     img {
