--- a/css/indexMobile.css
+++ b/css/indexMobile.css
@@ -4,3 +4,34 @@
 #popup img {
   width: 200px;
 }
+#buttonGroup {
+  position: absolute;
+  right: 0px;
+  margin-top: 0px;
+  width: 100%;
+  z-index: -1;
+  visibility: hidden;
+}
+.hamburgerButton {
+  visibility: visible;
+}
+#logo {
+  position: absolute;
+  width: 275px;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 10px 10px 10px 10px;
+  left: -275px;
+  top: 15px;
+}
+.menuButton {
+  display: block;
+  clear: both;
+  width: 100%;
+  border-radius: 0px;
+  margin-left: 0px;
+  background-color: #000000;
+}
+.menuButton:active {
+  background-color: #ffffff;
+  color: black;
+}
