--- a/css/index.less
+++ b/css/index.less
@@ -6,7 +6,8 @@
 @font-button: 'Oswald', sans-serif;
 @color-cream: #ffffff;
 
-html{
+html {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 body{
