--- a/css/indexMobile.less
+++ b/css/indexMobile.less
@@ -1,6 +1,11 @@
 #bg {
+    background-image:url('../images/bulbs.jpg');
     padding: 200px 30px 120px 30px;
     // z-index: -1000;
+}
+
+#popup-bg {
+    background-image:url('../images/bulbs.jpg');
 }
 
 #popup {
